
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/room_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_of_service"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_width="200dp"
        android:layout_marginStart="25dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_servico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_service_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/all_made"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/service_question"
        app:layout_constraintBottom_toBottomOf="@id/service_question" />

    <TextView
        android:id="@+id/service_question"
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_servico"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cost_of_service"

        />


    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.TipTime.CompoundButton.RadioButton"
        app:layout_constraintTop_toBottomOf="@id/service_question"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/service_question">
        >

        <RadioButton
            android:id="@+id/option_twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_incrivel" />

        <RadioButton
            android:id="@+id/option_fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_bom" />

        <RadioButton
            android:id="@+id/option_ten_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_ok" />

    </RadioGroup>


    <ImageView
        android:id="@+id/icon_round_up_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_up_switch"
        app:layout_constraintBottom_toBottomOf="@id/round_up_switch" />


    <Switch
            android:id="@+id/round_up_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:text="@string/text_switch"
            android:layout_marginStart="16dp"
            android:padding="15dp"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tip_options"
            app:layout_constraintStart_toStartOf="parent"
            />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:text="@string/text_button"
        android:textAllCaps="false"
        android:textColor="@color/secondaryTextColor"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/round_up_switch"
        app:layout_constraintStart_toStartOf="parent"

            />

    <TextView
        android:id="@+id/tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.TipTime.TextView"
        android:text="@string/tip_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCalcular"
        tools:text="Tip Amount: "

        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
